Load python plugin actions before the xmlgui is constructed

BUG:418901